--- a/index.html
+++ b/index.html
@@ -160,6 +160,33 @@
             </div>
         </div>  
 
+        <section class="host-section">
+            <h3>Meet the Host</h3>
+            <div class="host-container">
+                <div class="host-img">
+                    <img src="./assets/host.png" alt="">
+                </div>
+                <div class="host-details">
+                    <h4>Alex Kumar</h4>
+                    <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="host-media">
+                        <div class="img-wrapper">
+                            <img src="./assets/linkedin.png" alt="">
+                        </div>
+                        <div class="img-wrapper">
+                            <img src="./assets/x.png" alt="">
+                        </div>
+                        <div class="img-wrapper">
+                            <img src="./assets/instagram.png" alt="">
+                        </div>
+                        <div class="img-wrapper">
+                             <img src="./assets/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </section>
     
 </body>
