--- a/index.html
+++ b/index.html
@@ -189,5 +189,29 @@
 
     </section>
     
+    <footer>
+        <div class="footer-container">
+            <h2>Tech<span>Wave</span></h2>
+            <div class="footer-icon">
+                <div class="footer-icon-item">
+                    <img src="./assets/spotify-footer.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="footer-icon-item">
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <p>Apple Podcasts</p>
+                </div>
+                <div class="footer-icon-item">
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <p>Youtube</p>
+                </div>
+                <div class="footer-icon-item">
+                    <img src="./assets/twitter.png" alt="">
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <p class="reserve">© 2026 TechWave Podcast. All rights reserved.</p>                      
+        </div>
+    </footer>
 </body>
 </html>
