--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#">Host</a></li>
             </ul>
         </div>
-        <div class=" ">
+        <div class="header-button">
             <button class="btn">Subscribe <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="hamburger-icon">
@@ -63,9 +63,8 @@
         <div class="about-area">
             <div class="about-text">
                 <h3>About the Podcast</h3>
-                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology
-                <p>We break down complex topics into digestible insights, explore productivity strategies that actually work,</p>
-                <p>and share stories of personal growth from industry leaders.</p><br><br><br>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. <br>We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>and share stories of personal growth from industry leaders.
+                <br><br>
                 <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
                 </p>
             </div>
